...
        setupSegmentedControl()
        tableView.tableFooterView = UIView()
    }
    // MARK: - Methods
    
    private func setupSegmentedControl() {
        segmentedControl.setTitle("Open", forSegmentAt: 0)
        segmentedControl.setTitle("Closed", forSegmentAt: 1)
    }
    
    @IBAction func selectSegmentedControl(_ sender: UISegmentedControl) {
        if sender.selectedSegmentIndex == 0 {
            self.loadData(state: .open)
        } else if sender.selectedSegmentIndex == 1 {
...
