...
    var currentPage = 0
    
    override func viewDidLoad() {
        super.viewDidLoad()
        navigationController?.navigationBar.prefersLargeTitles = true
        navigationItem.largeTitleDisplayMode = .always
        self.title = "JavaPop"
        
        loadData()
        currentPage = 1
    }
    
    // MARK: - Methods
...
